--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
     "recommendations": [
         "tomblind.local-lua-debugger-vscode",
-        "sumneko.lua"
+        "sumneko.lua",
+        "eamodio.gitlens",
+        "muchiros.attention-theme"
     ]
 }
